# MUGEN_coinrun

./: .gitignore  COINRUN_README.md  CONFLICT_RESOLUTION.md  Makefile  README.md  pyproject.toml  requirements.txt
checkpoints/codec/: codec_epoch10.pt  codec_epoch100.pt  codec_epoch20.pt  codec_epoch30.pt  codec_epoch40.pt  codec_epoch50.pt  codec_epoch60.pt  codec_epoch70.pt  codec_epoch80.pt  codec_epoch90.pt  codec_final.pt
config/: default.yaml
data/demo/: manifest.txt
output/: generation_status.json
scripts/: create_demo_dataset.py  generate.py  serve_ui.py  train_codec.py  train_model.py
src/musicgen/: __init__.py  config_loader.py  text_encoder.py  types.py
src/musicgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/musicgen/agent/: __init__.py  feedback.py  workflow.py
src/musicgen/codec/: __init__.py  codec.py  vq.py
src/musicgen/data/: __init__.py  dataset.py
src/musicgen/inference/: __init__.py  generate.py
src/musicgen/model/: __init__.py  transformer.py
tests/: test_agent.py  test_codec.py  test_config_loader.py  test_model.py
